--- a/package.json
+++ b/package.json
@@ -3,22 +3,30 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "lint": "eslint resources/js/"
     },
     "devDependencies": {
+        "@eslint/js": "^9.17.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
         "concurrently": "^9.0.1",
+        "eslint": "^9.17.0",
+        "eslint-plugin-vue": "^9.32.0",
+        "eslint-plugin-vuejs-accessibility": "^2.4.1",
+        "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
+        "typescript-eslint": "^8.18.2",
         "vite": "^6.0"
     },
     "dependencies": {
         "dayjs": "^1.11.13",
         "hugeicons-vue": "^0.0.1",
         "sweetalert2": "^11.15.3",
-        "vue-router": "^4.5.0"
+        "vue-router": "^4.5.0",
+        "vue3-toastify": "^0.2.8"
     }
 }
