--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -3,6 +3,28 @@ server {
     server_name localhost;
     root /var/www/public;
 
+    # Gzip Compression
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_min_length 256;
+    gzip_vary on;
+
+    location ~ (^/docs/asset/.*) {
+        try_files $uri $uri/ /index.php$is_args$args;
+    }
+
+    # Static resources caching
+    location ~ \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|otf|eot|mp4|webm|ogg|ogv|webp)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # HTML caching
+    location ~* \.(html|htm)$ {
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+    }
+
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
 
