--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     networks:
       - laravelnet
     environment:
+      - "APP_NAME=Iliad Test"
       - "DB_CONNECTION=mysql"
       - "DB_HOST=db"
       - "DB_PORT=3306"
