--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
         "axios": "^1.7.9",
         "concurrently": "^9.0.1",
         "eslint": "^9.17.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-vue": "^9.32.0",
         "eslint-plugin-vuejs-accessibility": "^2.4.1",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
+        "prettier": "3.4.2",
         "tailwindcss": "^3.4.13",
         "typescript-eslint": "^8.18.2",
         "vite": "^6.0"
